--- a/app/src/main/res/layout/activity_crop_soil_analysis_manager.xml
+++ b/app/src/main/res/layout/activity_crop_soil_analysis_manager.xml
@@ -71,6 +71,7 @@
                 android:layout_weight="0.5"
                 android:ems="10"
                 android:hint="Enter"
+                android:inputType="numberDecimal"
                 android:textSize="14sp"
                 android:background="@drawable/input_shapes"
 
