--- a/app/src/main/res/layout/crop_soil_analysis_list_card.xml
+++ b/app/src/main/res/layout/crop_soil_analysis_list_card.xml
@@ -48,6 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
             android:orientation="vertical"
+            android:layout_marginEnd="8dp"
 
             >
 
