--- a/app/src/main/res/layout/content_crop_spraying_list.xml
+++ b/app/src/main/res/layout/content_crop_spraying_list.xml
@@ -11,10 +11,10 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/crop_sprayings_recyc_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:layout_marginTop="16dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
